src/objects/Event_Request__c.object
<CustomObject>
    <description>To be used to track Speaker Request, looks up to Activity Details</description>
    <fields>
        <fullName>Admin_Notes__c</fullName>
        <description>This field can be used to enter Admin Notes, only available to the Speaker Request Team.</description>
        <label>Admin Notes</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Approval_Process_End_Date__c</fullName>
        <label>Approval Process End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Process_Start_Date__c</fullName>
        <label>Approval Process Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_Class__c</fullName>
        <label>Asset Class</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Income</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Audience__c</fullName>
        <label>Audience</label>
        <picklist>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFS Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Morningstar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RIA</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Note__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity</label>
        <referenceTo>Activity_Detail__c</referenceTo>
        <relationshipName>Speaker_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call__c</fullName>
        <label>Call &amp; Participant Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-US Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFSI</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City_Tft__c</fullName>
        <label>City</label>
        <picklist>
            <picklistValues>
                <fullName>Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toronto</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conference_Room__c</fullName>
        <inlineHelpText>Conference Room</inlineHelpText>
        <label>Conference Room</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Event Request (Contact)</relationshipLabel>
        <relationshipName>Event_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius and Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Days_to_Approve__c</fullName>
        <formula>IF( !ISBLANK(Approval_Process_End_Date__c), Approval_Process_End_Date__c -  Approval_Process_Start_Date__c , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Approve</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>Requester__r.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Designated_Distribution_Rep__c</fullName>
        <label>Designated Distribution Rep</label>
        <picklist>
            <controllingField>City_Tft__c</controllingField>
            <picklistValues>
                <fullName>Samuel Devens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brian F. Lewis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryan Kirkwood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nicholas Walton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taryn Falcone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brian Johnson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daryl Tracy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lori Hubbard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tyler Canty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thomas F. Nolan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joseph Angelo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joseph J. Mathews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryan Mullen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doug Bailey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jenine Garrelick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benjamin Dick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ashley D. Thomas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Brown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danielle Malconian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laurin Pendleton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elaine Alston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robyn Daigle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jill Dean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andrew Gromer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linda Harring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thaddeus Roberts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claire Sorensen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Katherine Mudarri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Richard Drage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Holding</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dress_Code__c</fullName>
        <label>Dress Code</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Business Casual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resort Casual</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_End_Date__c</fullName>
        <description>This is used for SLDS</description>
        <label>Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Instructions__c</fullName>
        <inlineHelpText>Please enter any specific instructions you may have for your requested speaker.</inlineHelpText>
        <label>Speaker Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <description>This is used for SLDS</description>
        <label>Event_Start_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Title__c</fullName>
        <label>Event Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Types__c</fullName>
        <label>Event Type</label>
        <picklist>
            <picklistValues>
                <fullName>Dealer Conference - National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Conference - Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due Diligence Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFS Introduction/Strategy Introduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media / PR Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-firm Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portfolio/Strategy Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roadshow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Finals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Partner Event/Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational Due Diligence</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Hotel__c</fullName>
        <label>Hotel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISR_Role__c</fullName>
        <formula>TEXT(Requester__r.Speaker_Request_Approval__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISR Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Travel_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Travel Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Speaker_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to be used for data migration of historical speaker requests from Sharepoint.</description>
        <label>Legacy Speaker Request?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link_to_presentation_materials__c</fullName>
        <label>Link to Presentation Materials</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFS_Contact_for_Presentation_Materials__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MFS Contact for Presentation Materials</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Event_Request_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <picklist>
            <picklistValues>
                <fullName>In Person Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off-site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webcast</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notification_Date__c</fullName>
        <description>Used for Email Notification</description>
        <label>Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Visitors__c</fullName>
        <label>Number of Visitors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Event Request</relationshipLabel>
        <relationshipName>Speaker_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overall_Approval_Status__c</fullName>
        <label>Overall Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Requester__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Floor visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker Request</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested For</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Speaker_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sharepoint_ID__c</fullName>
        <description>Used for data migration from Sharepoint</description>
        <label>Sharepoint ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker_Expense_RC_Code__c</fullName>
        <formula>TEXT(Requester__r.RC_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Speaker Expense RC Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker_Name__c</fullName>
        <label>Speaker Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker_Rationalization__c</fullName>
        <description>Field used to capture rationale for requested speaker.</description>
        <label>Speaker Rationalization</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Speaker_Request_Instructions__c</fullName>
        <inlineHelpText>Please enter any specific instructions or notes you may have for the Speaker Request team. (E.g. alternate timeslot for speaker, alternate speaker, etc.)</inlineHelpText>
        <label>Instructions for Speaker Request Team</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <controllingField>Country__c</controllingField>
            <picklistValues>
                <fullName>Acre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agrigento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aguascalientes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alagoas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alessandria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amapá</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazonas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ancona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andaman and Nicobar Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anhui</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aosta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arezzo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arunachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ascoli Piceno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Capital Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avellino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baja California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baja California Sur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barletta-Andria-Trani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beijing</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <description>Used to track owner of the approval.</description>
        <label>Step</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitter_Department__c</fullName>
        <formula>CreatedBy.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitter Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TFT_Country__c</fullName>
        <formula>IF(ISPICKVAL( City_Tft__c , &apos;Boston&apos;) , &apos;United States&apos;, IF(ISPICKVAL( City_Tft__c , &apos;London&apos;), &apos;United Kingdom&apos;, &apos;Canada&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TFT_Disclaimer__c</fullName>
        <formula>&quot;Per Information Barrier Policy:&quot;  +BR()+
&quot;DO NOT include AUM, sales, or name of fund&quot; +BR()+
HYPERLINK(&apos;http://mfd/prodinfo/Mutual_Funds/trading_tour/trading_tour_policy.doc&apos;, &apos;Click here for additional information&apos;)+BR()+
&quot;Photographs are NOT allowed of individual trader screens&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disclaimer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <description>For &apos;Global Retail&apos; record type of related Relationship Field(Org), it will return &apos;US Retail Tier&apos;  value of the related Org. For &apos;Global Institutional Client&apos; record type of related Relationship Field(Org), it will return  &apos;Institutional Tier&apos;  value of the related Org. For other record types, it will return &apos;Non-US Retail Tier&apos; value of the related org.</description>
        <formula>IF(Organization__r.RecordType.DeveloperName==&apos;Global_Retail&apos;, Text(Organization__r.US_Retail_Tier__c) ,  IF(Organization__r.RecordType.DeveloperName==&apos;Global_Institutional_Client&apos;,  Text(Organization__r.Institutional_Tier__c) ,  Text(Organization__r.Non_US_Retail_Tier__c) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeZone__c</fullName>
        <label>Timezone</label>
        <picklist>
            <picklistValues>
                <fullName>(UTC-06:00) Central time (US &amp; Canada)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-05:00) Eastern time (US &amp; Canada)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+00:00) Dublin, Edinburgh, Lisbon, London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+08:00) Kuala Lumpur, Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+10:00) Canberra, Melbourne, Sydney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-07:00) Mountain Time (US &amp; Canada)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-08:00) Pacific Time (US &amp; Canada)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-12:00) International Date Line West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-11:00) Coordinated Universal Time-11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-10:00) Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-09:00) Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-04:00) Atlantic Time (Canada)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-03:30) Newfoundland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-03:00) Brasilia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-01:00) Azores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+01:00) Amsterdam, Berlin, Bern, Rome, Stockholm, Vienna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+02:00) Athens, Bucharest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+03:00) Minsk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+03:30) Tehran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+03:00) Moscow, St. Petersburg, Volgograd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+04:30) Kabul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+05:00) Islamabad, Karachi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+05:30) Chennai, Kolkata, Mumbai, New Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+05:45) Kathmandu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC+06:00) Dhaka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-08:00) Baja California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-07:00) Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-07:00) Chihuahua, La Paz, Mazatlan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-06:00) Central America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(UTC-06:00) Guadalajara, Mexico City, Monterrey</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Translator_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Translator Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_of_Trading_Floor_Tour__c</fullName>
        <label>Type of Trading Floor Tour</label>
        <picklist>
            <picklistValues>
                <fullName>10 min, no Trader involvement, designated MFS rep walkthrough (pre-approval required)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 min, quick overview with Q&amp;A, tour conducted by Trader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 min, comprehensive tour conducted by Trader</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visit_Date__c</fullName>
        <label>Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>